--- a/index.html
+++ b/index.html
@@ -1,2 +1,40 @@
-# Project1
-Project 1 is about Singapore. The website for project 1 is created using only HTML code.
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+<body>
+<h1 align="center">Singapore</h1>
+<p><i><b>Singapore</b></i>. It is recognized as the Republic of Singapore and is located in Southeast Asia.</p>
+<hr>
+<h2><b>Fun places in Singapore</b></h2>
+<figure>
+<img src="Birds.jpg" alt="Birds.jpg" width="400px" height="300px">
+<p>The Jurong Bird Park is an attraction in Jurong, Singapore. The park is also one of the largest with a collection over 5,000 birds.</p>
+<img src="Flyer.jpg" alt="Flyer.jpg" width="400px" height="300px">
+<p>Singapore Flyer is an observation wheel at the Downtown Core district of Singapore. It has 28 air conditioned capsules, which can fit 28 people.</p>
+<img src="Bridge.jpg" alt="Bridge.jpg" width="400px" height="300px"
+<p>The Helix Bridge is one of the best landmarks and its the most celebrated. The bridge is also made to look like a human DNA cell.</p>
+</figure>
+<hr>
+<br>
+<h2 id="contact">Contact Us</h2>
+
+<hr>
+<br>
+<nav align="center">
+  <a href="Birds.html">Birds</a>
+  <a>   |  </a>
+  <a href="Visit2.html">Flyer</a>
+  <a>  |  </a>
+  <a href="Visit3.html">Helix Bridge</a>
+  <a> | </a>
+<a href="#Contact">Contact Us</a>
+</nav>
+<br>
+<hr>
+<footer align="center"> All material used to create this website is ONLY for educational purposes. Website created by: Michael Schultz @ 2022</footer>
+  </body>
+</html>
+
