--- a/index.html
+++ b/index.html
@@ -10,17 +10,44 @@
 <hr>
 <h2><b>Fun places in Singapore</b></h2>
 <figure>
-<img src="Birds.jpg" alt="Birds.jpg" width="400px" height="300px">
+<a href="https://www.mandai.com/en/jurong-bird-park.html" target="_blank"><img src="Birds.jpg" alt="Bird" width="400px" height="300px"></a>
 <p>The Jurong Bird Park is an attraction in Jurong, Singapore. The park is also one of the largest with a collection over 5,000 birds.</p>
-<img src="Flyer.jpg" alt="Flyer.jpg" width="400px" height="300px">
+<a href="https://www.singaporeflyer.com/en" target="_blank"><img src="Flyer.jpg" alt="Flyer" width="400px" height="300px"></a>
 <p>Singapore Flyer is an observation wheel at the Downtown Core district of Singapore. It has 28 air conditioned capsules, which can fit 28 people.</p>
-<img src="Bridge.jpg" alt="Bridge.jpg" width="400px" height="300px"
+<a href="https://www.tripadvisor.com/Attraction_Review-g294265-d2138898-Reviews-The_Helix_Bridge-Singapore.html" target="_blank"><img src="Bridge.jpg" alt="Helix" width="400px" height="300px"></a>
 <p>The Helix Bridge is one of the best landmarks and its the most celebrated. The bridge is also made to look like a human DNA cell.</p>
 </figure>
 <hr>
+<table border="2" bgcolor="Blue">
+<tr align="center" bgcolor="Orange">
+<th width="200">Population in Singapore places</th>
+</table>
+<table border="2" bgcolor="Blue">
+  <tr align="center" bgcolor="Orange">
+<td>Jurong Bird Park</td><td>Singapore Flyer</td><td>Singapore Helix Bridge</td></tr>
+</table>
+<table border="2" bgcolor="Blue">
+<tr align="center" bgcolor="Orange">
+<td>4.6 Million</td><td>5 Million</td><td>2 Million</td></tr>
+</table>
+<hr>
+<h3>
+<ul><b>List of other places you can visit in Singapore</b>
+  <li>Tiger Sky Tower</li>
+  <dl>
+  <dd>The highest observation tower in Singapore</dd>
+  <li>Henderson Waves</li>
+<dd>It crosses over Henderson Road and connects Mount Faber Park to Telok Blangah Hill Park.</dd>
+  <li>Sentosa</li>
+  <dd>The island is separated from the main island of Singapore by a channel of water, the Keppel Harbour, and is adjacent to Pulau Brani, a smaller island wedged between Sentosa and the main island.</dd>
+  <li>Singapore Art Museum</li>
+  <dd>The Singapore Art Museum is an art museum located in the Downtown Core district of Singapore</dd>
+  <li>Gardens by the Bay</li>
+  <dd>The Gardens by the Bay is a nature park spanning 101 hectares in the Central Region of Singapore, adjacent to the Marina Reservoir.</dd>
+ </ul>
+<hr>
 <br>
 <h2 id="contact">Contact Us</h2>
-
 <hr>
 <br>
 <nav align="center">
@@ -31,10 +58,12 @@
   <a href="Visit3.html">Helix Bridge</a>
   <a> | </a>
 <a href="#Contact">Contact Us</a>
+<a href=#Bird></a>
+<a href=#Visit2></a>
+<a href=#visit3></a>
 </nav>
 <br>
 <hr>
 <footer align="center"> All material used to create this website is ONLY for educational purposes. Website created by: Michael Schultz @ 2022</footer>
   </body>
 </html>
-
